--- a/index.html
+++ b/index.html
@@ -75,16 +75,19 @@
                 </div>
                 <div id="equipment-page" class="page-content hidden">
                     <div class="flex flex-col sm:flex-row justify-between sm:items-center mb-6 gap-4"><h1 class="text-3xl font-bold text-white">Quản lý Thiết bị</h1><button id="add-equipment-btn" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg flex items-center justify-center sm:w-auto w-full"><svg class="h-5 w-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path></svg>Thêm thiết bị</button></div>
+                    <div class="bg-gray-800 p-4 rounded-xl shadow-lg mb-6"><div id="equipment-filters" class="grid grid-cols-1 sm:grid-cols-3 gap-4"></div></div>
                     <div class="bg-gray-800 rounded-xl shadow-lg overflow-x-auto hidden md:block"><table class="w-full text-left min-w-[720px]"><thead class="bg-gray-700"><tr><th class="p-4 font-semibold">Tên thiết bị</th><th class="p-4 font-semibold">S/N</th><th class="p-4 font-semibold">Loại</th><th class="p-4 font-semibold">Trạng thái</th><th class="p-4 font-semibold text-right">Giá thuê/ngày</th><th class="p-4 font-semibold text-center">Hành động</th></tr></thead><tbody id="equipment-table-body"></tbody></table></div>
                     <div id="equipment-list-mobile" class="md:hidden space-y-4"></div>
                 </div>
                 <div id="customers-page" class="page-content hidden">
                     <div class="flex flex-col sm:flex-row justify-between sm:items-center mb-6 gap-4"><h1 class="text-3xl font-bold text-white">Quản lý Khách hàng</h1><button id="add-customer-btn" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg flex items-center justify-center sm:w-auto w-full"><svg class="h-5 w-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path></svg>Thêm khách hàng</button></div>
+                    <div class="bg-gray-800 p-4 rounded-xl shadow-lg mb-6"><div id="customer-filters" class="grid grid-cols-1 sm:grid-cols-3 gap-4"></div></div>
                     <div class="bg-gray-800 rounded-xl shadow-lg overflow-x-auto hidden md:block"><table class="w-full text-left min-w-[720px]"><thead class="bg-gray-700"><tr><th class="p-4 font-semibold">Họ và tên</th><th class="p-4 font-semibold">Số điện thoại</th><th class="p-4 font-semibold">Email</th><th class="p-4 font-semibold">Số CCCD</th><th class="p-4 font-semibold text-center">Hành động</th></tr></thead><tbody id="customer-table-body"></tbody></table></div>
                     <div id="customer-list-mobile" class="md:hidden space-y-4"></div>
                 </div>
                 <div id="rentals-page" class="page-content hidden">
                     <div class="flex flex-col sm:flex-row justify-between sm:items-center mb-6 gap-4"><h1 class="text-3xl font-bold text-white">Quản lý Đơn thuê</h1><button id="add-rental-btn" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg flex items-center justify-center sm:w-auto w-full"><svg class="h-5 w-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path></svg>Tạo đơn thuê</button></div>
+                    <div class="bg-gray-800 p-4 rounded-xl shadow-lg mb-6"><div id="rental-filters" class="grid grid-cols-1 sm:grid-cols-3 gap-4"></div></div>
                     <div class="bg-gray-800 rounded-xl shadow-lg overflow-x-auto hidden md:block"><table class="w-full text-left min-w-[720px]"><thead class="bg-gray-700"><tr><th class="p-4 font-semibold">Khách hàng</th><th class="p-4 font-semibold">Ngày thuê</th><th class="p-4 font-semibold">Ngày trả</th><th class="p-4 font-semibold">Trạng thái</th><th class="p-4 font-semibold text-right">Tổng tiền</th><th class="p-4 font-semibold text-center">Hành động</th></tr></thead><tbody id="rental-table-body"></tbody></table></div>
                     <div id="rental-list-mobile" class="md:hidden space-y-4"></div>
                 </div>
@@ -98,7 +101,7 @@
     <div id="confirm-delete-modal" class="fixed inset-0 bg-black bg-opacity-70 hidden items-center justify-center z-50 p-4"><div class="bg-gray-800 rounded-2xl shadow-xl w-full max-w-md p-8 transform transition-all scale-95"><h3 class="text-xl font-bold text-white mb-4">Xác nhận xóa</h3><p class="text-gray-400 mb-6">Bạn có chắc chắn muốn xóa <strong id="item-to-delete-name" class="font-bold text-amber-400"></strong>? Hành động này không thể hoàn tác.</p><div class="flex justify-end gap-4"><button id="cancel-delete-btn" class="bg-gray-600 hover:bg-gray-500 text-white font-bold py-2 px-6 rounded-lg">Hủy</button><button id="confirm-delete-btn" class="bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-6 rounded-lg">Xóa</button></div></div></div>
     <div id="rental-modal" class="fixed inset-0 bg-black bg-opacity-70 hidden items-center justify-center z-50 p-4"><div class="bg-gray-800 rounded-2xl shadow-xl w-full max-w-4xl p-8 transform transition-all scale-95 flex flex-col h-[90vh]"><div class="flex justify-between items-center mb-6 flex-shrink-0"><h2 class="text-2xl font-bold text-white">Tạo đơn thuê mới</h2><button id="close-rental-modal-btn" class="text-gray-400 hover:text-white text-3xl leading-none">&times;</button></div><div class="flex-grow overflow-y-auto pr-2"><form id="rental-form"><div class="mb-6"><h3 class="text-lg font-semibold text-blue-400 border-b border-gray-700 pb-2 mb-4">1. Thông tin khách hàng</h3><div class="relative"><label for="customer-search" class="block text-gray-300 mb-2">Tìm khách hàng (theo tên hoặc SĐT)</label><input type="text" id="customer-search" class="w-full p-3 bg-gray-700 rounded-md border border-gray-600" autocomplete="off"><div id="customer-search-results" class="absolute w-full bg-gray-600 rounded-md mt-1 z-10 max-h-48 overflow-y-auto hidden"></div></div><div id="selected-customer-info" class="mt-4 p-4 bg-gray-700/50 rounded-lg hidden"></div></div><div class="mb-6"><h3 class="text-lg font-semibold text-blue-400 border-b border-gray-700 pb-2 mb-4">2. Thêm thiết bị</h3><label for="equipment-search" class="block text-gray-300 mb-2">Nhập Serial Number và nhấn Thêm</label><div class="flex gap-2"><input type="text" id="equipment-search" class="flex-grow p-3 bg-gray-700 rounded-md border border-gray-600" autocomplete="off"><button type="button" id="add-equipment-to-cart-btn" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-4 rounded-lg">Thêm</button></div><p id="equipment-search-error" class="text-red-400 text-sm mt-1"></p><div id="rental-cart" class="mt-4 space-y-2"></div></div><div class="mb-6"><h3 class="text-lg font-semibold text-blue-400 border-b border-gray-700 pb-2 mb-4">3. Thời gian & Chi phí</h3><div class="grid grid-cols-1 md:grid-cols-2 gap-4"><div><label for="start-date" class="block text-gray-300 mb-2">Ngày thuê</label><input type="text" id="start-date" class="w-full p-3 bg-gray-700 rounded-md border border-gray-600 cursor-pointer" readonly></div><div><label for="end-date" class="block text-gray-300 mb-2">Ngày trả</label><input type="text" id="end-date" class="w-full p-3 bg-gray-700 rounded-md border border-gray-600 cursor-pointer" readonly></div></div><div id="rental-summary" class="mt-4 p-4 bg-gray-700/50 rounded-lg hidden"><div class="flex justify-between items-center"><span class="text-gray-400">Tổng số ngày thuê:</span><span id="rental-days" class="font-semibold text-white">0 ngày</span></div><div class="flex justify-between items-center mt-2"><span class="text-gray-400 text-xl">Tổng chi phí:</span><span id="rental-total-cost" class="font-bold text-2xl text-green-400">0 VNĐ</span></div></div></div></form></div><div class="mt-8 flex justify-end flex-shrink-0"><button type="button" id="cancel-rental-modal-btn" class="bg-gray-600 hover:bg-gray-500 text-white font-bold py-3 px-6 rounded-lg mr-4">Hủy</button><button type="submit" id="save-rental-btn" form="rental-form" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg disabled:bg-gray-500 disabled:cursor-not-allowed" disabled>Lưu đơn thuê</button></div></div></div>
     <div id="confirm-return-modal" class="fixed inset-0 bg-black bg-opacity-70 hidden items-center justify-center z-50 p-4"><div class="bg-gray-800 rounded-2xl shadow-xl w-full max-w-2xl p-8 transform transition-all scale-95"><div class="flex justify-between items-center mb-6"><h2 class="text-2xl font-bold text-white">Xác nhận trả hàng</h2><button id="close-return-modal-btn" class="text-gray-400 hover:text-white text-3xl leading-none">&times;</button></div><form id="return-form"><div id="return-info" class="space-y-4"></div><div class="mt-6 border-t border-gray-700 pt-6 space-y-4"><h3 class="text-lg font-semibold text-blue-400">Điều chỉnh chi phí (nếu có)</h3><div><label for="adjustment-amount" class="block text-gray-300 mb-2">Giảm giá (-)/ Phụ thu (+)</label><input type="number" id="adjustment-amount" class="w-full p-3 bg-gray-700 rounded-md border border-gray-600" placeholder="VD: -50000 hoặc 100000"></div><div><label for="adjustment-notes" class="block text-gray-300 mb-2">Ghi chú điều chỉnh</label><textarea id="adjustment-notes" rows="2" class="w-full p-3 bg-gray-700 rounded-md border border-gray-600"></textarea></div><div class="p-4 bg-gray-900 rounded-lg"><label for="final-cost" class="block text-green-400 mb-2 font-semibold">TỔNG THU CUỐI CÙNG (VNĐ)</label><input type="number" id="final-cost" class="w-full p-3 bg-gray-700 text-2xl font-bold text-green-300 rounded-md border border-gray-600"></div></div><p id="return-form-error" class="text-red-400 text-sm mt-4 text-center"></p><div class="mt-8 flex justify-end"><button type="button" id="cancel-return-modal-btn" class="bg-gray-600 hover:bg-gray-500 text-white font-bold py-3 px-6 rounded-lg mr-4">Hủy</button><button type="submit" class="bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-6 rounded-lg">Xác nhận & Hoàn tất</button></div></form></div></div>
-    <div id="details-modal" class="fixed inset-0 bg-black bg-opacity-70 hidden items-center justify-center z-50 p-4"><div class="bg-gray-800 rounded-2xl shadow-xl w-full max-w-lg p-8 transform transition-all scale-95"><div class="flex justify-between items-center mb-6"><h2 id="details-modal-title" class="text-2xl font-bold text-white"></h2><button id="close-details-modal-btn" class="text-gray-400 hover:text-white text-3xl leading-none">&times;</button></div><div id="details-modal-content" class="space-y-3 text-gray-300"></div></div></div>
+    <div id="details-modal" class="fixed inset-0 bg-black bg-opacity-70 hidden items-center justify-center z-50 p-4"><div class="bg-gray-800 rounded-2xl shadow-xl w-full max-w-lg p-8 transform transition-all scale-95"><div class="flex justify-between items-center mb-6"><h2 id="details-modal-title" class="text-2xl font-bold text-white"></h2><button id="close-details-modal-btn" class="text-gray-400 hover:text-white text-3xl leading-none">&times;</button></div><div id="details-modal-content" class="space-y-3 text-gray-300"></div><div id="details-modal-actions" class="mt-6 border-t border-gray-700 pt-4"></div></div></div>
 
     <!-- Firebase SDK -->
     <script type="module">
@@ -413,7 +416,7 @@
                         <div class="flex justify-between py-2 border-b border-gray-700"><span>Email:</span><span class="font-semibold">${cus.email || 'N/A'}</span></div>
                         <div class="flex justify-between py-2 border-b border-gray-700"><span>Số CCCD:</span><span class="font-semibold">${cus.idCard || 'N/A'}</span></div>
                     `;
-                    openDetailsModal('Chi tiết khách hàng', content);
+                    openDetailsModal('Chi tiết khách hàng', content, 'customer', id, cus.fullName);
                 }
             }
         });
@@ -683,17 +686,65 @@
         document.getElementById('cancel-rental-modal-btn').addEventListener('click', closeRentalModal);
 
         // --- Details Modal ---
-        function openDetailsModal(title, content) {
+        function openDetailsModal(title, content, type = null, id = null, name = null) {
             document.getElementById('details-modal-title').textContent = title;
             document.getElementById('details-modal-content').innerHTML = content;
+            const actionsDiv = document.getElementById('details-modal-actions');
+            if (type && id) {
+                actionsDiv.innerHTML = `<button id="view-history-btn" class="bg-teal-600 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded-lg w-full">Xem lịch sử thuê</button>`;
+                document.getElementById('view-history-btn').onclick = () => openHistoryModal(type, id, name);
+            } else {
+                actionsDiv.innerHTML = '';
+            }
             detailsModal.classList.remove('hidden');
             detailsModal.classList.add('flex');
         }
-        document.getElementById('close-details-modal-btn').addEventListener('click', () => {
+        function closeDetailsModal() {
             detailsModal.classList.add('hidden');
             detailsModal.classList.remove('flex');
-        });
-        detailsModal.addEventListener('click', (e) => { if(e.target === detailsModal) { detailsModal.classList.add('hidden'); detailsModal.classList.remove('flex'); } });
+        }
+        document.getElementById('close-details-modal-btn').addEventListener('click', closeDetailsModal);
+        detailsModal.addEventListener('click', (e) => { if(e.target === detailsModal) closeDetailsModal(); });
+
+        async function openHistoryModal(type, id, name) {
+            closeDetailsModal(); // Close the current details modal
+            let historyQuery;
+            if (type === 'customer') {
+                historyQuery = query(collection(db, 'rentals'), where('customer.id', '==', id), orderBy('createdAt', 'desc'));
+            } else if (type === 'equipment') {
+                // This query is more complex. We'll fetch all and filter client-side for simplicity in this MVP.
+                // For production with large data, consider a different data structure.
+                historyQuery = query(collection(db, 'rentals'), orderBy('createdAt', 'desc'));
+            }
+
+            const snapshot = await getDocs(historyQuery);
+            let rentals = [];
+            if (type === 'customer') {
+                snapshot.forEach(doc => rentals.push(doc.data()));
+            } else {
+                snapshot.forEach(doc => {
+                    const rental = doc.data();
+                    if (rental.items.some(item => item.id === id)) {
+                        rentals.push(rental);
+                    }
+                });
+            }
+
+            let content = `<p class="text-gray-400">Không có lịch sử thuê.</p>`;
+            if (rentals.length > 0) {
+                content = rentals.map(rental => {
+                    const statusClass = getStatusClass(rental.status, 'rental');
+                    return `<div class="p-3 bg-gray-700/50 rounded-lg">
+                        <div class="flex justify-between">
+                            <p class="font-semibold">${type === 'customer' ? `Đơn thuê ngày ${formatDate(rental.createdAt)}` : rental.customer.name}</p>
+                            <span class="px-2 py-1 text-xs font-semibold rounded-full ${statusClass}">${rental.status}</span>
+                        </div>
+                        <p class="text-sm text-gray-400">Từ ${formatDate(rental.startDate)} đến ${formatDate(rental.endDate)}</p>
+                    </div>`;
+                }).join('');
+            }
+            openDetailsModal(`Lịch sử thuê của ${type === 'customer' ? name : `thiết bị ${name}`}`, content);
+        }
 
         // --- Auth & Mobile UI Event Listeners ---
         document.getElementById('login-form').addEventListener('submit', (e) => { e.preventDefault(); signInWithEmailAndPassword(auth, loginForm['login-email'].value, loginForm['login-password'].value).catch(err => loginErrorEl.textContent = 'Email hoặc mật khẩu không đúng.'); });
